; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_backend.c_test_config_backend__checks_version.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_backend.c_test_config_backend__checks_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@GIT_CONFIG_BACKEND_INIT = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@GIT_ERROR_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_backend__checks_version() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_7__, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = bitcast %struct.TYPE_7__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.TYPE_7__* @GIT_CONFIG_BACKEND_INIT to i8*), i64 4, i1 false)
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  store i32 1024, i32* %5, align 4
  %6 = call i32 @git_config_new(i32** %1)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @git_config_add_backend(i32* %8, %struct.TYPE_7__* %2, i32 0, i32* null, i32 0)
  %10 = call i32 @cl_git_fail(i32 %9)
  %11 = call %struct.TYPE_6__* (...) @git_error_last()
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %3, align 8
  %12 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @cl_assert_equal_i(i32 %12, i32 %15)
  %17 = call i32 (...) @git_error_clear()
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  store i32 1024, i32* %18, align 4
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_config_add_backend(i32* %19, %struct.TYPE_7__* %2, i32 0, i32* null, i32 0)
  %21 = call i32 @cl_git_fail(i32 %20)
  %22 = call %struct.TYPE_6__* (...) @git_error_last()
  store %struct.TYPE_6__* %22, %struct.TYPE_6__** %3, align 8
  %23 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @cl_assert_equal_i(i32 %23, i32 %26)
  %28 = load i32*, i32** %1, align 8
  %29 = call i32 @git_config_free(i32* %28)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_config_new(i32**) #2

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_config_add_backend(i32*, %struct.TYPE_7__*, i32, i32*, i32) #2

declare dso_local %struct.TYPE_6__* @git_error_last(...) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_error_clear(...) #2

declare dso_local i32 @git_config_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
